k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: luminarytrade-backend
  namespace: luminarytrade
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: luminarytrade-backend
  type: ClusterIP
